--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		<div id="vsebina">
 			<canvas id="myCanvas" width="830" height="640"></canvas>
 			
-		<script src="index.js"></script>		
+		<script src="brick.js"></script>		
 	</body>
 </html>
