--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 	<head>
 		<title>Bricks</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
-
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+		<script type="application/javascript" src="JScript/bricks.js"></script>
+		<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
+		<script src="JScript/jQuery.js"></script>
 	</head>
 	
 	<body onload="draw()">
